--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,17 @@ dist.jlink.output=${dist.jlink.dir}/cafetuto
 endorsed.classpath=
 excludes=
 file.reference.commons-dbutils-1.8.1-sources.jar=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\src\\main\\java\\com\\mycompany\\cafetuto\\Common DButils\\commons-dbutils-1.8.1-sources.jar
+file.reference.commons-dbutils-1.8.1-sources.jar-1=..\\..\\..\\Desktop\\$-$-$-$-$\\New folder\\Common DButils\\commons-dbutils-1.8.1-sources.jar
+file.reference.commons-dbutils-1.8.1-sources.jar-2=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\Common DButils\\commons-dbutils-1.8.1-sources.jar
 file.reference.jcalendar-1.4.jar=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\src\\main\\java\\com\\mycompany\\cafetuto\\JCalendar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\..\\Desktop\\$-$-$-$-$\\New folder\\JCalendar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\JCalendar\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.2.0.jar=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\src\\main\\java\\com\\mycompany\\cafetuto\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=..\\..\\..\\Desktop\\$-$-$-$-$\\New folder\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-2=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\mysql-connector-j-8.2.0.jar
 file.reference.rs2xml.jar=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\src\\main\\java\\com\\mycompany\\cafetuto\\rs2xml\\rs2xml.jar
+file.reference.rs2xml.jar-1=..\\..\\..\\Desktop\\$-$-$-$-$\\New folder\\rs2xml\\rs2xml.jar
+file.reference.rs2xml.jar-2=..\\..\\..\\Desktop\\$-$-$-$-$\\CafeTuto\\rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +54,16 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.commons-dbutils-1.8.1-sources.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.rs2xml.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.commons-dbutils-1.8.1-sources.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-2}:\
+    ${file.reference.commons-dbutils-1.8.1-sources.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.rs2xml.jar-2}:\
+    ${libs.MYSQL_JBDC.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,7 +99,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=cafetuto
-main.class=CafeTuto
+main.class=Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
